# af3-bench

./: .gitignore  Cargo.toml  README.md  plan.MD
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
py/: deepmind_shim.py  ligo_shim.py
py/af3_fallback/: msa_kernel.py
results/20250809-220920/: deepmind.jsonl  ligo.jsonl  summary.csv
results/20250809-221124/: deepmind.jsonl  ligo.jsonl  summary.csv
results/20250809-221328/: deepmind.jsonl  ligo.jsonl  summary.csv
results/20250809-221352/: deepmind.jsonl  ligo.jsonl  summary.csv
results/20250809-222048/: ligo.jsonl  summary.csv
results/20250809-222306/: ligo.jsonl  summary.csv
results/20250809-222427/: ligo.jsonl  summary.csv
results/20250809-222808/: ligo.jsonl  summary.csv
results/20250809-222912/: ligo.jsonl  summary.csv
results/20250809-223001/: ligo.jsonl  summary.csv
results/20250809-223719/: ligo.jsonl  summary.csv
results/20250809-223813/: ligo.jsonl  summary.csv
results/20250809-224303/: ligo.jsonl  summary.csv
results/20250809-225305/: ligo.jsonl  summary.csv
results/20250809-225522/: ligo.jsonl  summary.csv
results/20250809-225645/: ligo.jsonl  summary.csv
results/20250809-225759/: ligo.jsonl  summary.csv
results/20250809-225840/: ligo.jsonl  summary.csv
results/20250809-225950/: ligo.jsonl  summary.csv
results/20250809-230052/: ligo.jsonl  summary.csv
results/20250809-230227/: ligo.jsonl  summary.csv
results/20250809-231044/: ligo.jsonl  summary.csv
results/20250809-231239/: ligo.jsonl  summary.csv
scripts/: dev.sh
(+117 files in other folders)
