[package]
name = "af3-bench-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "af3-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
af3_core = { path = "../core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1.3"
sysinfo = { version = "0.30", features = ["serde"] }

